adicionando marca d'água

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Site_Germinatech</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   </head>
@@ -119,5 +119,30 @@
         <h3>Conheça todos >>></h3>
       </section>
     </main>
+    <footer
+    style="
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      text-align: center;
+      margin-top: 100px;
+      padding: 10px;
+      font-family: sans-serif;
+    "
+  >
+    Site criado por
+    <a
+      href="https://github.com/andreasseituno"
+      target="_blank"
+      style="text-decoration: none; color: white; font-weight: bolder"
+      >André Asseituno</a
+    >
+    para a
+    <a
+      href="https://github.com/germinatech"
+      target="_blank"
+      style="text-decoration: none; color: white; font-weight: bolder"
+      >GerminaTech</a
+    >
+  </footer>
   </body>
 </html>
